# aoc

./: .gitignore  README.md
assets/: template.rs  update.ps1
crate/aoc/: Cargo.toml
crate/aoc/src/: lib.rs  prelude.rs
crate/aoc2015/: Cargo.toml
crate/aoc2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day18.rs  day19.rs  day23.rs  lib.rs
crate/aoc2016/: Cargo.toml
crate/aoc2016/src/: day01.rs  day02.rs  day03.rs  lib.rs
crate/aoc2017/: Cargo.toml
crate/aoc2017/src/: day01.rs  day02.rs  lib.rs
crate/aoc2018/: Cargo.toml
crate/aoc2018/src/: day01.rs  day02.rs  lib.rs
crate/aoc2019/: Cargo.toml
crate/aoc2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  intcode.rs  lib.rs
crate/aoc2020/: Cargo.toml
crate/aoc2020/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  lib.rs
crate/aoc2021/: Cargo.toml
crate/aoc2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day10.rs  lib.rs
crate/aoc2022/: Cargo.toml
crate/aoc2022/src/: day01.rs  day02.rs  lib.rs
crate/aoc2023/: Cargo.toml
crate/aoc2023/src/: day01.rs  day02.rs  lib.rs
