[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std"] }
collect-mac = "0.1.0"
derivative = "2.2.0"
itermore = { version = "0.6", default-features = false, features = ["array_chunks", "array_windows", "circular_array_windows"] }
itertools = "0.12"
lazy-regex = "3.0.2"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
